# basel

./: .clippy.toml  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  basel.toml  biome.jsonc  clippy.toml  deno.jsonc  dprint.jsonc  flake.nix  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
basel/: Cargo.toml
basel/src/: cli.rs  config.rs  directives.rs  extensions.rs  format.rs  lib.rs  main.rs  manifest.rs  names.rs  output.rs  render.rs  roles.rs  schemes.rs  slots.rs  swatches.rs  templates.rs  upstream.rs
basel/src/output/: format.rs  formatting.rs  strategy.rs  style.rs  upstream.rs
basel/src/render/: context.rs  index.rs  manifest.rs
basel/src/schemes/: load.rs  names.rs  roles.rs  swatches.rs
basel/src/templates/: directives.rs
crates/basel/: Cargo.toml
crates/basel/src/: cli.rs  main.rs  manifest.rs  output.rs  render.rs  schemes.rs
crates/basel/src/output/: upstream.rs
crates/basel/src/schemes/: roles.rs  swatches.rs
crates/basel/src/templates/: directives.rs
crates/cargo-bin/: Cargo.toml
crates/cargo-bin/src/: main.rs
crates/simple-palettes/: Cargo.toml  Dioxus.toml
crates/simple-palettes/src/: main.rs
crates/theythemer/: Cargo.toml
crates/theythemer/src/: cli.rs  config.rs  lib.rs  main.rs  manifest.rs
crates/theythemer/src/render/: objects.rs
crates/theythemer/src/templates/: directives.rs  hosts.rs
render/cutiepro/helix/: cutiepro.toml
render/cutiepro/kitty/: cutiepro.conf
schemes/: cutiepro.toml
simple-palettes/: Cargo.toml
simple-palettes/assets/: main.css
simple-palettes/src/: main.rs
src/: cli.rs  config.rs  io.rs  lib.rs  main.rs  manifest.rs  render.rs  scheme.rs  schemes.rs  slots.rs  template.rs  templates.rs  upstream.rs
src/output/: format.rs  upstream.rs
src/render/: context.rs  objects.rs
src/schemes/: names.rs  roles.rs  swatches.rs
src/templates/: directives.rs  providers.rs
templates/: _macros.md.jinja
templates/assets/circles/: SWATCH.svg.jinja
templates/kitty/: [[scheme]].conf.basel
templates/ports/fish/: SCHEME.theme  SCHEME.theme.jinja
templates/ports/ghostty/: SCHEME.jinja
templates/ports/helix/: SCHEME.toml.jinja
templates/ports/iterm2/: SCHEME.itermcolors.jinja
templates/ports/kitty/: SCHEME.conf.jinja
templates/ports/starship/: SCHEME.toml
themes/: cutiepro.toml
tools/cargo-bin/: Cargo.toml
tools/cargo-bin/src/: main.rs
