[package]
name = "basel"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "basel"

[dependencies]
clap.workspace = true
comrak.workspace = true
deunicode.workspace = true
env_logger.workspace = true
git-url-parse.workspace = true
git2.workspace = true
hex_color.workspace = true
indexmap.workspace = true
indoc.workspace = true
json5format.workspace = true
log.workspace = true
minijinja.workspace = true
owo-colors.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
taplo.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
