[package]
name = "simple-palettes"
version.workspace = true
edition.workspace = true
description = "color picker palettes!!"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[lints]
workspace = true
