[package]
name = "basel"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "basel"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
comrak = { version = "0.45", features = ["shortcodes"] }
deunicode = "1"
env_logger = "0.11"
git-url-parse = "0.6"
git2 = "0.20"
globset = "0.4"
hex_color = { version = "3", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
indoc = "2"
itertools = "0.14"
json5format = "0.2"
log = "0.4"
minijinja = { version = "2", features = [
  "json",
  "loader",
  "preserve_order",
  "unicode",
] }
owo-colors = { version = "4", features = ["supports-colors"] }
palette.workspace = true
quick-xml = "0.38"
regex = "1"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
shellexpand = "3"
strum = { version = "0.27", features = ["derive"] }
taplo = "0.14"
thiserror = "2"
toml = { version = "0.9", features = [
  "display",
  "parse",
  "preserve_order",
  "serde",
] }
unicode-normalization = "0.1"
url = "2"
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lints]
workspace = true
