[package]
name = "simple-palettes"
version = "0.1.0"
edition.workspace = true
description = "color picker palettes!!"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
# still in prototyping phase
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros"], optional = true }
dioxus = { version = "0.7", features = ["router"] }
# dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0" }
gloo-storage = "0.3"
palette.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
web-sys = { version = "0.3", features = [
  "DomRect",
  "HtmlElement",
  "PointerEvent",
  "Window",
] }

[features]
default = []
server = ["dep:axum", "dioxus/fullstack", "dioxus/server"]
web = ["dioxus/fullstack", "dioxus/web"]

[lints]
workspace = true
