[package]
name = "cargo-bin"
version = "0.0.0"
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cargo-run-bin = { version = "1", features = ["cli"] }

[lints]
workspace = true
